started scripts to create fpc-src deb
 SVN 9407@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2468,6 +2468,7 @@ tools/install/build_fpc_rpm.sh svneol=native#text/plain
 tools/install/build_fpc_snaphot_rpm.sh svneol=native#text/plain
 tools/install/create_clean_fpcsrc_directory.sh svneol=native#text/plain
 tools/install/create_clean_lazarus_directory.sh svneol=native#text/plain
+tools/install/create_fpc-src_deb.sh svneol=native#text/plain
 tools/install/create_fpc_deb.sh svneol=native#text/plain
 tools/install/create_fpc_export_tgz.sh svneol=native#text/plain
 tools/install/create_fpc_tgz_from_local_dir.sh svneol=native#text/plain
@@ -2480,6 +2481,10 @@ tools/install/cross_unix/HowToCreate_fpc_crosswin32_rpm.txt svneol=native#text/p
 tools/install/cross_unix/build_linux_cross_win32_rpm.sh svneol=native#text/plain
 tools/install/cross_unix/update_cross_fpc.sh svneol=native#text/plain
 tools/install/cvsexportlocal.pas svneol=native#text/pascal
+tools/install/debian_fpc/changelog svneol=native#text/plain
+tools/install/debian_fpc/changelog.Debian svneol=native#text/plain
+tools/install/debian_fpc/control svneol=native#text/plain
+tools/install/debian_fpc/copyright svneol=native#text/plain
 tools/install/do_nothing.sh svneol=native#text/plain
 tools/install/download_and_build_fpc_rpm.sh svneol=native#text/plain
 tools/install/file_filter.sh svneol=native#text/plain
