--- a/.gitattributes
+++ b/.gitattributes
@@ -2485,6 +2485,7 @@ tools/install/debian_fpc/changelog svneol=native#text/plain
 tools/install/debian_fpc/changelog.Debian svneol=native#text/plain
 tools/install/debian_fpc/control svneol=native#text/plain
 tools/install/debian_fpc/copyright svneol=native#text/plain
+tools/install/debian_fpc/postinst svneol=native#text/plain
 tools/install/do_nothing.sh svneol=native#text/plain
 tools/install/download_and_build_fpc_rpm.sh svneol=native#text/plain
 tools/install/file_filter.sh svneol=native#text/plain
