--- a/tools/install/debian_fpc/control
+++ b/tools/install/debian_fpc/control
@@ -4,6 +4,8 @@ Section: devel
 Priority: optional
 Maintainer: Mattias Gaertner <mattias@cvs.freepascal.org>
 Architecture: i386
+Pre-Depends: debhelper (>= 4.2), libgpmg1-dev
+Replaces: fp-compiler, fp-utils, fp-ide, fp-units-rtl, fp-units-base, fp-units-fcl, fp-units-fv, fp-units-gtk, fp-units-gtk2, fp-units-gnome1, fp-units-db, fp-units-gfx, fp-units-net, fp-units-misc
 Description: Free Pascal Compiler
  Freepascal is a free 32/64bit Pascal Compiler. It comes with a
  run-time library fully compatible with Turbo Pascal 7.0 and nearly
