--- a/.gitattributes
+++ b/.gitattributes
@@ -88,6 +88,7 @@ components/codetools/languages/codetools.es.po svneol=native#text/plain
 components/codetools/languages/codetools.esutf.po svneol=native#text/plain
 components/codetools/languages/codetools.fi.po svneol=native#text/plain
 components/codetools/languages/codetools.fr.po svneol=native#text/plain
+components/codetools/languages/codetools.id.po svneol=native#text/plain
 components/codetools/languages/codetools.it.po svneol=native#text/plain
 components/codetools/languages/codetools.pl.po svneol=native#text/plain
 components/codetools/languages/codetools.pliso.po svneol=native#text/plain
@@ -397,6 +398,7 @@ components/synedit/languages/synedit.ca.po svneol=native#text/plain
 components/synedit/languages/synedit.de.po svneol=native#text/plain
 components/synedit/languages/synedit.fi.po svneol=native#text/plain
 components/synedit/languages/synedit.fr.po svneol=native#text/plain
+components/synedit/languages/synedit.id.po svneol=native#text/plain
 components/synedit/languages/synedit.it.po svneol=native#text/plain
 components/synedit/languages/synedit.pl.po svneol=native#text/plain
 components/synedit/languages/synedit.pliso.po svneol=native#text/plain
@@ -407,6 +409,7 @@ components/synedit/languages/synedit.ua.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ca.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.de.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.fr.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.id.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.it.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.pl.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.pliso.po svneol=native#text/plain
@@ -1793,6 +1796,7 @@ languages/lazaruside.es.po svneol=native#text/plain
 languages/lazaruside.fi.po svneol=native#text/plain
 languages/lazaruside.fr.po svneol=native#text/plain
 languages/lazaruside.he.po svneol=native#text/plain
+languages/lazaruside.id.po svneol=native#text/plain
 languages/lazaruside.it.po svneol=native#text/plain
 languages/lazaruside.ja.po svneol=native#text/plain
 languages/lazaruside.nl.po svneol=native#text/plain
@@ -1809,6 +1813,7 @@ languages/objinspstrconsts.de.po svneol=native#text/plain
 languages/objinspstrconsts.es.po svneol=native#text/plain
 languages/objinspstrconsts.fi.po svneol=native#text/plain
 languages/objinspstrconsts.fr.po svneol=native#text/plain
+languages/objinspstrconsts.id.po svneol=native#text/plain
 languages/objinspstrconsts.it.po svneol=native#text/plain
 languages/objinspstrconsts.ja.po svneol=native#text/plain
 languages/objinspstrconsts.nl.po svneol=native#text/plain
@@ -2319,6 +2324,7 @@ lcl/languages/lcl.de.po svneol=native#text/plain
 lcl/languages/lcl.es.po svneol=native#text/plain
 lcl/languages/lcl.fi.po svneol=native#text/plain
 lcl/languages/lcl.fr.po svneol=native#text/plain
+lcl/languages/lcl.id.po svneol=native#text/plain
 lcl/languages/lcl.it.po svneol=native#text/plain
 lcl/languages/lcl.nl.po svneol=native#text/plain
 lcl/languages/lcl.pb.po svneol=native#text/plain
