added example for html help with ipro  from Armin Diehl
 SVN 9420@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -934,6 +934,18 @@ examples/helphtml/htmlhelp1.lpr svneol=native#text/plain
 examples/helphtml/unit1.lfm svneol=native#text/plain
 examples/helphtml/unit1.lrs svneol=native#text/plain
 examples/helphtml/unit1.pas svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelp2unit1.lfm svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelp2unit1.lrs svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelp2unit1.pas svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelp2unit2.lfm svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelp2unit2.lrs svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelp2unit2.pas svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelp2viewer.lfm svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelp2viewer.lrs svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelp2viewer.pas svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelpsample.lpi svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelpsample.lpr svneol=native#text/plain
+examples/htmlhelp_ipro/htmlhelpsample.lps svneol=native#text/plain
 examples/idequickfix/quickfixdemo1.pas svneol=native#text/plain
 examples/idequickfix/quickfixexample.lpk svneol=native#text/plain
 examples/idequickfix/quickfixexample.pas svneol=native#text/plain
