added component popupnotifier  from Felipe Monteiro de Carvalho and A.J. Venter
 SVN 9427@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -227,6 +227,14 @@ components/opengl/lazopenglcontext.pas svneol=native#text/plain
 components/opengl/openglcontext.lrs svneol=native#text/plain
 components/opengl/openglcontext.pas svneol=native#text/plain
 components/opengl/topenglcontrol.xpm svneol=native#text/plain
+components/popupnotifier/demo/popupnotifierdemo.lpi svneol=native#text/plain
+components/popupnotifier/demo/popupnotifierdemo.lpr svneol=native#text/plain
+components/popupnotifier/demo/unit1.lfm svneol=native#text/plain
+components/popupnotifier/demo/unit1.lrs svneol=native#text/plain
+components/popupnotifier/demo/unit1.pas svneol=native#text/plain
+components/popupnotifier/popupnotifier.pas svneol=native#text/plain
+components/popupnotifier/popupnotifierlaz.lpk svneol=native#text/plain
+components/popupnotifier/popupnotifierlaz.pas svneol=native#text/plain
 components/prettyformat/pfidesource.pas svneol=native#text/plain
 components/prettyformat/prettyformat.lpk svneol=native#text/plain
 components/prettyformat/prettyformat.pas svneol=native#text/plain
@@ -2439,6 +2447,7 @@ packager/brokendependenciesdlg.pas svneol=native#text/pascal
 packager/globallinks/lazcustomform-0.lpl svneol=native#text/plain
 packager/globallinks/lazopenglcontext-0.lpl svneol=native#text/plain
 packager/globallinks/macosfiles-0.lpl svneol=native#text/plain
+packager/globallinks/popupnotifierlaz-0.lpl svneol=native#text/plain
 packager/globallinks/prettyformat-0.lpl svneol=native#text/plain
 packager/globallinks/projtemplates-0.lpl svneol=native#text/plain
 packager/globallinks/trayiconlaz-0.lpl svneol=native#text/plain
