implemented a dialog to find components in the palette
 SVN 9434@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1164,6 +1164,9 @@ ide/filereferencelist.pas svneol=native#text/pascal
 ide/findinfilesdlg.lfm svneol=native#text/plain
 ide/findinfilesdlg.lrs svneol=native#text/plain
 ide/findinfilesdlg.pas svneol=native#text/pascal
+ide/findpalettecomp.lfm svneol=native#text/plain
+ide/findpalettecomp.lrs svneol=native#text/plain
+ide/findpalettecomp.pas svneol=native#text/plain
 ide/findrenameidentifier.lfm svneol=native#text/plain
 ide/findrenameidentifier.lrs svneol=native#text/pascal
 ide/findrenameidentifier.pas svneol=native#text/pascal
