--- a/components/custom/customidecomps.pas.template
+++ b/components/custom/customidecomps.pas.template
@@ -20,7 +20,8 @@
 
   Author: Mattias Gaertner
 
-
+  THIS IS OBSOLETE.
+  
   Use this unit to add components to the lazarus IDE.
 
   For example:
