--- a/.gitattributes
+++ b/.gitattributes
@@ -60,6 +60,8 @@ components/codetools/customcodetool.pas svneol=native#text/pascal
 components/codetools/definetemplates.pas svneol=native#text/pascal
 components/codetools/directorycacher.pas svneol=native#text/plain
 components/codetools/eventcodetool.pas svneol=native#text/pascal
+components/codetools/examples/addmethod.lpi svneol=native#text/plain
+components/codetools/examples/addmethod.lpr svneol=native#text/plain
 components/codetools/examples/finddeclaration.lpi svneol=native#text/plain
 components/codetools/examples/finddeclaration.lpr svneol=native#text/plain
 components/codetools/examples/fixfilenames.lpi svneol=native#text/plain
