--- a/.gitattributes
+++ b/.gitattributes
@@ -2411,6 +2411,8 @@ lcl/tests/test2_2labelattributes.lpi svneol=native#text/plain
 lcl/tests/test2_2labelattributes.lpr svneol=native#text/pascal
 lcl/tests/test4_1synedit.lpi svneol=native#text/plain
 lcl/tests/test4_1synedit.lpr svneol=native#text/plain
+lcl/tests/test4_2pagecontrol.lpi svneol=native#text/plain
+lcl/tests/test4_2pagecontrol.lpr svneol=native#text/plain
 lcl/tests/test5_1asyncprocess.lpi svneol=native#text/plain
 lcl/tests/test5_1asyncprocess.lpr svneol=native#text/plain
 lcl/tests/test5_1worker.pas svneol=native#text/plain
