* Added and updated chinese translations from freefcw
 SVN 9481@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -98,6 +98,7 @@ components/codetools/languages/codetools.plwin.po svneol=native#text/plain
 components/codetools/languages/codetools.po svneol=native#text/plain
 components/codetools/languages/codetools.ru.po svneol=native#text/plain
 components/codetools/languages/codetools.ua.po svneol=native#text/plain
+components/codetools/languages/codetools.zh-cn.po svneol=native#text/utf8
 components/codetools/laz_dom.pas svneol=native#text/pascal
 components/codetools/laz_xmlcfg.pas svneol=native#text/pascal
 components/codetools/laz_xmlread.pas svneol=native#text/pascal
@@ -416,6 +417,7 @@ components/synedit/languages/synedit.plwin.po svneol=native#text/plain
 components/synedit/languages/synedit.po svneol=native#text/plain
 components/synedit/languages/synedit.ru.po svneol=native#text/plain
 components/synedit/languages/synedit.ua.po svneol=native#text/plain
+components/synedit/languages/synedit.zh-cn.po svneol=native#text/utf8
 components/synedit/languages/synmacrorecorder.ca.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.de.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.fr.po svneol=native#text/plain
@@ -427,6 +429,7 @@ components/synedit/languages/synmacrorecorder.plwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ru.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ua.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.zh-cn.po svneol=native#text/utf8
 components/synedit/syncompletion.pas svneol=native#text/pascal
 components/synedit/synedit.inc svneol=native#text/pascal
 components/synedit/synedit.pp svneol=native#text/pascal
@@ -2360,6 +2363,7 @@ lcl/languages/lcl.plwin.po svneol=native#text/plain
 lcl/languages/lcl.po svneol=native#text/plain
 lcl/languages/lcl.ru.po svneol=native#text/plain
 lcl/languages/lcl.ua.po svneol=native#text/plain
+lcl/languages/lcl.zh-cn.po svneol=native#text/utf8
 lcl/lazconfigstorage.pas svneol=native#text/pascal
 lcl/lazhelphtml.pas svneol=native#text/pascal
 lcl/lazhelpintf.pas svneol=native#text/pascal
