added void check
 SVN 9485@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2417,6 +2417,8 @@ lcl/tests/test4_1synedit.lpi svneol=native#text/plain
 lcl/tests/test4_1synedit.lpr svneol=native#text/plain
 lcl/tests/test4_2pagecontrol.lpi svneol=native#text/plain
 lcl/tests/test4_2pagecontrol.lpr svneol=native#text/plain
+lcl/tests/test4_3listview.lpi svneol=native#text/plain
+lcl/tests/test4_3listview.lpr svneol=native#text/plain
 lcl/tests/test5_1asyncprocess.lpi svneol=native#text/plain
 lcl/tests/test5_1asyncprocess.lpr svneol=native#text/plain
 lcl/tests/test5_1worker.pas svneol=native#text/plain
