--- a/lcl/tests/test4_3listview.lpi
+++ b/lcl/tests/test4_3listview.lpi
@@ -8,6 +8,7 @@
       <MainUnit Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
+      <Title Value="test4_1synedit"/>
     </General>
     <PublishOptions>
       <Version Value="2"/>
@@ -20,23 +21,23 @@
         <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
-    <Units Count="2">
+    <RequiredPackages Count="1">
+      <Item1>
+        <PackageName Value="SynEdit"/>
+      </Item1>
+    </RequiredPackages>
+    <Units Count="1">
       <Unit0>
-        <Filename Value="addmethod.lpr"/>
+        <Filename Value="test4_3listview.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="AddMethod"/>
+        <UnitName Value="test4_3listview"/>
       </Unit0>
-      <Unit1>
-        <Filename Value="scanexamples/simpleunit1.pas"/>
-        <IsPartOfProject Value="True"/>
-        <UnitName Value="SimpleUnit1"/>
-      </Unit1>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="5"/>
     <SearchPaths>
-      <OtherUnitFiles Value="$(LazarusDir)/components/codetools/units/$(TargetCPU)-$(TargetOS)/;scanexamples/"/>
+      <LCLWidgetType Value="gtk2"/>
     </SearchPaths>
     <CodeGeneration>
       <Generate Value="Faster"/>
