--- a/components/macfiles/examples/createmacapplication.lpi
+++ b/components/macfiles/examples/createmacapplication.lpi
@@ -8,11 +8,11 @@
         <SaveClosedFiles Value="False"/>
         <SaveOnlyProjectUnits Value="True"/>
       </Flags>
+      <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="createmacapplication"/>
-      <ActiveEditorIndexAtStart Value="0"/>
     </General>
     <PublishOptions>
       <Version Value="2"/>
@@ -36,11 +36,6 @@
         <Filename Value="createmacapplication.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="CreateMacApplication"/>
-        <CursorPos X="30" Y="21"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="0"/>
-        <UsageCount Value="20"/>
-        <Loaded Value="True"/>
       </Unit0>
     </Units>
   </ProjectOptions>
