renamed stringgriddlg.pas to lazstringgridedit.pas
 SVN 9515@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1353,6 +1353,9 @@ ideintf/imagelisteditor.lfm svneol=native#text/plain
 ideintf/imagelisteditor.lrs svneol=native#text/plain
 ideintf/imagelisteditor.pp svneol=native#text/pascal
 ideintf/lazideintf.pas svneol=native#text/pascal
+ideintf/lazstringgridedit.lfm svneol=native#text/plain
+ideintf/lazstringgridedit.lrs svneol=native#text/plain
+ideintf/lazstringgridedit.pas svneol=native#text/plain
 ideintf/listviewpropedit.lfm svneol=native#text/plain
 ideintf/listviewpropedit.lrs svneol=native#text/plain
 ideintf/listviewpropedit.pp svneol=native#text/pascal
@@ -1375,9 +1378,6 @@ ideintf/packageintf.pas svneol=native#text/pascal
 ideintf/projectintf.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
 ideintf/srceditorintf.pas svneol=native#text/pascal
-ideintf/stringgriddlg.lfm svneol=native#text/plain
-ideintf/stringgriddlg.lrs svneol=native#text/plain
-ideintf/stringgriddlg.pas svneol=native#text/plain
 ideintf/stringspropeditdlg.lfm svneol=native#text/plain
 ideintf/stringspropeditdlg.lrs svneol=native#text/plain
 ideintf/stringspropeditdlg.pas svneol=native#text/plain
