--- a/.gitattributes
+++ b/.gitattributes
@@ -143,6 +143,7 @@ components/fpcunit/ide/testcaseopts.lfm svneol=native#text/plain
 components/fpcunit/ide/testcaseopts.lrs svneol=native#text/pascal
 components/fpcunit/ide/testcaseopts.pas svneol=native#text/pascal
 components/fpcunit/lib/README.txt svneol=native#text/plain
+components/fpcunit/xmlreporter.pas svneol=native#text/plain
 components/images/examples/README.txt svneol=native#text/plain
 components/images/examples/imagesexample.lpi svneol=native#text/plain
 components/images/examples/imagesexample.lpr svneol=native#text/pascal
