--- a/.gitattributes
+++ b/.gitattributes
@@ -2418,6 +2418,8 @@ lcl/tests/test2_2labelattributes.lpi svneol=native#text/plain
 lcl/tests/test2_2labelattributes.lpr svneol=native#text/pascal
 lcl/tests/test2_3twosimpleforms1.lpi svneol=native#text/plain
 lcl/tests/test2_3twosimpleforms1.lpr svneol=native#text/plain
+lcl/tests/test3_2listboxdrawitem.lpi svneol=native#text/plain
+lcl/tests/test3_2listboxdrawitem.lpr svneol=native#text/plain
 lcl/tests/test4_1synedit.lpi svneol=native#text/plain
 lcl/tests/test4_1synedit.lpr svneol=native#text/plain
 lcl/tests/test4_2pagecontrol.lpi svneol=native#text/plain
