--- a/.gitattributes
+++ b/.gitattributes
@@ -412,6 +412,7 @@ components/synedit/languages/synedit.fi.po svneol=native#text/plain
 components/synedit/languages/synedit.fr.po svneol=native#text/plain
 components/synedit/languages/synedit.id.po svneol=native#text/plain
 components/synedit/languages/synedit.it.po svneol=native#text/plain
+components/synedit/languages/synedit.nl.po svneol=native#text/plain
 components/synedit/languages/synedit.pl.po svneol=native#text/plain
 components/synedit/languages/synedit.pliso.po svneol=native#text/plain
 components/synedit/languages/synedit.plwin.po svneol=native#text/plain
