+ Added duch translation and  new string from Darius
 SVN 9547@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -92,6 +92,7 @@ components/codetools/languages/codetools.fi.po svneol=native#text/plain
 components/codetools/languages/codetools.fr.po svneol=native#text/plain
 components/codetools/languages/codetools.id.po svneol=native#text/plain
 components/codetools/languages/codetools.it.po svneol=native#text/plain
+components/codetools/languages/codetools.nl.po svneol=native#text/plain
 components/codetools/languages/codetools.pl.po svneol=native#text/plain
 components/codetools/languages/codetools.pliso.po svneol=native#text/plain
 components/codetools/languages/codetools.plwin.po svneol=native#text/plain
