--- a/examples/postscript/samplepostscriptcanvas.lpi
+++ b/examples/postscript/samplepostscriptcanvas.lpi
@@ -1,38 +1,19 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
+    <PathDelim Value="\"/>
     <Version Value="5"/>
     <General>
       <Flags>
         <SaveClosedFiles Value="False"/>
         <SaveOnlyProjectUnits Value="True"/>
       </Flags>
+      <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="1"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="samplepostscriptcanvas"/>
     </General>
-    <Units Count="2">
-      <Unit0>
-        <Filename Value="samplepostscriptcanvas.lpr"/>
-        <IsPartOfProject Value="True"/>
-        <UnitName Value="samplepostscriptcanvas"/>
-        <UsageCount Value="20"/>
-      </Unit0>
-      <Unit1>
-        <CursorPos X="21" Y="9"/>
-        <EditorIndex Value="0"/>
-        <Filename Value="usamplepostscriptcanvas.pas"/>
-        <ComponentName Value="Form1"/>
-        <IsPartOfProject Value="True"/>
-        <Loaded Value="True"/>
-        <ResourceFilename Value="usamplepostscriptcanvas.lrs"/>
-        <TopLine Value="1"/>
-        <UnitName Value="uSamplePostScriptCanvas"/>
-        <UsageCount Value="20"/>
-      </Unit1>
-    </Units>
     <PublishOptions>
       <Version Value="2"/>
       <IgnoreBinaries Value="False"/>
@@ -50,15 +31,37 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
+    <Units Count="2">
+      <Unit0>
+        <Filename Value="samplepostscriptcanvas.lpr"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="samplepostscriptcanvas"/>
+      </Unit0>
+      <Unit1>
+        <Filename Value="usamplepostscriptcanvas.pas"/>
+        <ComponentName Value="Form1"/>
+        <IsPartOfProject Value="True"/>
+        <ResourceFilename Value="usamplepostscriptcanvas.lrs"/>
+        <UnitName Value="uSamplePostScriptCanvas"/>
+      </Unit1>
+    </Units>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="2"/>
+    <Version Value="5"/>
+    <PathDelim Value="\"/>
     <SearchPaths>
-      <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
+      <SrcPath Value="$(LazarusDir)\lcl\;$(LazarusDir)\lcl\interfaces\$(LCLWidgetType)\"/>
     </SearchPaths>
     <CodeGeneration>
       <Generate Value="Faster"/>
     </CodeGeneration>
+    <Linking>
+      <Options>
+        <Win32>
+          <GraphicApplication Value="True"/>
+        </Win32>
+      </Options>
+    </Linking>
     <Other>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
