+ converted findreplacedialog to lfm patch by: Darius
 SVN 9556@trunk

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ components/turbopower_ipro/units
 designer/jitform/units
 designer/units
 examples/units
+ide/*.bak
 ide/revision.inc
 ide/units
 ideintf/units
