--- a/.gitattributes
+++ b/.gitattributes
@@ -1178,6 +1178,8 @@ ide/findpalettecomp.pas svneol=native#text/plain
 ide/findrenameidentifier.lfm svneol=native#text/plain
 ide/findrenameidentifier.lrs svneol=native#text/pascal
 ide/findrenameidentifier.pas svneol=native#text/pascal
+ide/findreplacedialog.lfm svneol=native#text/plain
+ide/findreplacedialog.lrs svneol=native#text/plain
 ide/findreplacedialog.pp svneol=native#text/pascal
 ide/formeditor.pp svneol=native#text/pascal
 ide/frmsearch.lfm svneol=native#text/plain
