--- a/.gitattributes
+++ b/.gitattributes
@@ -2573,6 +2573,7 @@ tools/install/win32/create_installer.bat svneol=native#text/x-msdos-program
 tools/install/win32/create_snapshot_installer.bat svneol=native#text/x-msdos-program
 tools/install/win32/editoroptions.xml svneol=native#text/xml
 tools/install/win32/environmentoptions.xml svneol=native#text/xml
+tools/install/win32/installerstrconsts.pas svneol=native#text/plain
 tools/install/win32/lazarus_install_cheetah.bmp -text svneol=unset#image/bmp
 tools/install/win32/lazarus_install_cheetah_small.bmp -text svneol=unset#image/bmp
 tools/install/win32/readme.txt svneol=native#text/plain
