added multithreading examples
 SVN 9575@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -994,11 +994,26 @@ examples/memotest.lpi svneol=native#text/plain
 examples/memotest.pp svneol=native#text/pascal
 examples/messagedialogs.lpi svneol=native#text/plain
 examples/messagedialogs.pp svneol=native#text/pascal
+examples/multithreading/criticalsectionexample1.lpi svneol=native#text/plain
+examples/multithreading/criticalsectionexample1.lpr svneol=native#text/plain
+examples/multithreading/criticalsectionunit1.lfm svneol=native#text/plain
+examples/multithreading/criticalsectionunit1.lrs svneol=native#text/plain
+examples/multithreading/criticalsectionunit1.pas svneol=native#text/plain
 examples/multithreading/mainunit.lfm svneol=native#text/plain
 examples/multithreading/mainunit.lrs svneol=native#text/plain
 examples/multithreading/mainunit.pas svneol=native#text/plain
 examples/multithreading/multithreadingexample1.lpi svneol=native#text/plain
 examples/multithreading/multithreadingexample1.lpr svneol=native#text/plain
+examples/multithreading/processmessagesunit1.lfm svneol=native#text/plain
+examples/multithreading/processmessagesunit1.lrs svneol=native#text/plain
+examples/multithreading/processmessagesunit1.pas svneol=native#text/plain
+examples/multithreading/singlethreadingexample1.lpi svneol=native#text/plain
+examples/multithreading/singlethreadingexample1.lpr svneol=native#text/plain
+examples/multithreading/waitforexample1.lpi svneol=native#text/plain
+examples/multithreading/waitforexample1.lpr svneol=native#text/plain
+examples/multithreading/waitforunit1.lfm svneol=native#text/plain
+examples/multithreading/waitforunit1.lrs svneol=native#text/plain
+examples/multithreading/waitforunit1.pas svneol=native#text/plain
 examples/notebk.lpi svneol=native#text/plain
 examples/notebk.pp svneol=native#text/pascal
 examples/notebku.pp svneol=native#text/pascal
