--- a/examples/multithreading/singlethreadingexample1.lpi
+++ b/examples/multithreading/singlethreadingexample1.lpi
@@ -11,6 +11,7 @@
     </General>
     <PublishOptions>
       <Version Value="2"/>
+      <IgnoreBinaries Value="False"/>
       <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
       <ExcludeFileFilter Value="*.(bak|ppu|ppw|o|so);*~;backup"/>
     </PublishOptions>
@@ -27,16 +28,16 @@
     </RequiredPackages>
     <Units Count="2">
       <Unit0>
-        <Filename Value="multithreadingexample1.lpr"/>
+        <Filename Value="singlethreadingexample1.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="MultiThreadingExample1"/>
+        <UnitName Value="SingleThreadingExample1"/>
       </Unit0>
       <Unit1>
-        <Filename Value="mainunit.pas"/>
+        <Filename Value="processmessagesunit1.pas"/>
         <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
-        <ResourceFilename Value="mainunit.lrs"/>
-        <UnitName Value="MainUnit"/>
+        <ResourceFilename Value="processmessagesunit1.lrs"/>
+        <UnitName Value="ProcessMessagesUnit1"/>
       </Unit1>
     </Units>
   </ProjectOptions>
