--- a/.gitattributes
+++ b/.gitattributes
@@ -60,6 +60,8 @@ components/codetools/customcodetool.pas svneol=native#text/pascal
 components/codetools/definetemplates.pas svneol=native#text/pascal
 components/codetools/directorycacher.pas svneol=native#text/plain
 components/codetools/eventcodetool.pas svneol=native#text/pascal
+components/codetools/examples/addeventmethod.lpi svneol=native#text/plain
+components/codetools/examples/addeventmethod.lpr svneol=native#text/plain
 components/codetools/examples/addmethod.lpi svneol=native#text/plain
 components/codetools/examples/addmethod.lpr svneol=native#text/plain
 components/codetools/examples/codecompletion.lpi svneol=native#text/plain
@@ -73,6 +75,7 @@ components/codetools/examples/getcontext.lpr svneol=native#text/plain
 components/codetools/examples/methodjumping.lpi svneol=native#text/plain
 components/codetools/examples/methodjumping.pas svneol=native#text/plain
 components/codetools/examples/scanexamples/BigLettersUnit.pas svneol=native#text/plain
+components/codetools/examples/scanexamples/addeventexample.pas svneol=native#text/plain
 components/codetools/examples/scanexamples/brokenfilenames.pas svneol=native#text/plain
 components/codetools/examples/scanexamples/brokenincfiles.inc svneol=native#text/plain
 components/codetools/examples/scanexamples/completion1.pas svneol=native#text/plain
