added procedure list from Graeme Geldenhuys
 SVN 9625@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1280,6 +1280,9 @@ ide/newprojectdlg.pp svneol=native#text/pascal
 ide/objectlists.pas svneol=native#text/pascal
 ide/outputfilter.pas svneol=native#text/pascal
 ide/patheditordlg.pas svneol=native#text/pascal
+ide/procedurelist.lfm svneol=native#text/plain
+ide/procedurelist.lrs svneol=native#text/plain
+ide/procedurelist.pas svneol=native#text/plain
 ide/progressdlg.lfm svneol=native#text/plain
 ide/progressdlg.lrs svneol=native#text/plain
 ide/progressdlg.pas svneol=native#text/plain
