TButtonGlyph now uses shared bitmaps, improved debugging mem leaks
 SVN 9629@trunk

--- a/ide/lazarus.lpi
+++ b/ide/lazarus.lpi
@@ -14,7 +14,6 @@
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
     </General>
-    <LazDoc Paths=""/>
     <PublishOptions>
       <Version Value="2"/>
       <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
@@ -40,7 +39,7 @@
       <Filename Value="../lazarus"/>
     </Target>
     <SearchPaths>
-      <UnitOutputDirectory Value="$(LazarusDir)/units/$(TargetCPU)-$(TargetOS)/"/>
+      <UnitOutputDirectory Value="$(LazarusDir)/units/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <CodeGeneration>
       <Generate Value="Faster"/>
