started h2pas frontend, localized watch list
 SVN 9631@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -151,6 +151,12 @@ components/fpcunit/ide/testcaseopts.lrs svneol=native#text/pascal
 components/fpcunit/ide/testcaseopts.pas svneol=native#text/pascal
 components/fpcunit/lib/README.txt svneol=native#text/plain
 components/fpcunit/xmlreporter.pas svneol=native#text/plain
+components/h2pas/h2pasdlg.lfm svneol=native#text/plain
+components/h2pas/h2pasdlg.lrs svneol=native#text/plain
+components/h2pas/h2pasdlg.pas svneol=native#text/plain
+components/h2pas/h2passtrconsts.pas svneol=native#text/plain
+components/h2pas/h2paswizard.lpk svneol=native#text/plain
+components/h2pas/h2paswizard.pas svneol=native#text/plain
 components/images/examples/README.txt svneol=native#text/plain
 components/images/examples/imagesexample.lpi svneol=native#text/plain
 components/images/examples/imagesexample.lpr svneol=native#text/pascal
