--- a/.gitattributes
+++ b/.gitattributes
@@ -151,6 +151,8 @@ components/fpcunit/ide/testcaseopts.lrs svneol=native#text/pascal
 components/fpcunit/ide/testcaseopts.pas svneol=native#text/pascal
 components/fpcunit/lib/README.txt svneol=native#text/plain
 components/fpcunit/xmlreporter.pas svneol=native#text/plain
+components/h2pas/h2pasconfig.pas svneol=native#text/plain
+components/h2pas/h2pasconvert.pas svneol=native#text/plain
 components/h2pas/h2pasdlg.lfm svneol=native#text/plain
 components/h2pas/h2pasdlg.lrs svneol=native#text/plain
 components/h2pas/h2pasdlg.pas svneol=native#text/plain
